Add simultaneous grid simulation and analysis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ endif()
 add_executable(main main.C)
 target_link_libraries(main Garfield::Garfield)
 
+add_executable(multigrid multigrid.C)
+target_link_libraries(multigrid Garfield::Garfield)
+
 
 #---Copy all files locally to the build directory-------------------------------
 foreach(_file mesh.mphtxt Potential.txt dielectrics.dat)
