Add ability to time many avalanches

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ target_link_libraries(main Garfield::Garfield)
 add_executable(multigrid multigrid.C)
 target_link_libraries(multigrid Garfield::Garfield)
 
+add_executable(timekeeper timekeeper.C)
+target_link_libraries(timekeeper Garfield::Garfield)
+
 
 #---Copy all files locally to the build directory-------------------------------
 foreach(_file mesh.mphtxt Potential.txt dielectrics.dat)
